<ScrollView android:id="@+id/ScrollView01"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:minWidth="140sp">

	<RelativeLayout
		android:id="@+id/activity_new_user_layout"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@android:drawable/dialog_holo_light_frame"
		android:theme="@style/AppTheme"
		android:visibility="visible"
		>

		<AutoCompleteTextView
			android:id="@+id/full_name"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="left"
			android:editable="true"
			android:enabled="true"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:hint="@string/full_name_hint"
			android:inputType="textCapWords|textPersonName|textAutoComplete"
			android:maxLines="1"
			android:minWidth="190sp"
			android:singleLine="true"
			android:text="@string/full_name"
			android:textSize="14sp"
			android:textStyle="bold"
			android:visibility="visible"/>


		<EditText
			android:id="@+id/email"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@id/full_name"
			android:autoLink="email"
			android:autoText="false"
			android:clickable="false"
			android:editable="true"
			android:enabled="true"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:hint="@string/email_hint"
			android:inputType="textEmailAddress|textAutoComplete"
			android:maxWidth="80sp"
			android:minWidth="190sp"
			android:text="@string/email"
			android:textIsSelectable="false"
			android:textSize="14sp"
			android:textStyle="bold"
			android:visibility="visible"/>

		<EditText
			android:id="@+id/password"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@id/email"
			android:autoLink="email"
			android:autoText="false"
			android:clickable="false"
			android:editable="true"
			android:enabled="true"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:hint="@string/user_password_hint"
			android:inputType="textPassword"
			android:maxWidth="80sp"
			android:minWidth="190sp"
			android:text="@string/email"
			android:textIsSelectable="false"
			android:textSize="14sp"
			android:textStyle="bold"
			android:visibility="visible"/>

		<Switch
			android:id="@+id/user_gender_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignStart="@id/password"
			android:layout_below="@id/password"
			android:layout_marginLeft="2dp"
			android:layout_marginStart="2dp"
			android:checked="true"
			android:clickable="true"
			android:enabled="true"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:hint="@string/user_gender_hint"
			android:maxWidth="40sp"
			android:minWidth="40sp"
			android:textOff="@string/male"
			android:textOn="@string/female"
			android:textSize="14sp"
			android:textStyle="bold"/>

		<Switch
			android:id="@+id/user_unit_system"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_below="@id/user_gender_value"
			android:layout_marginLeft="2dp"
			android:layout_marginStart="2dp"
			android:checked="true"
			android:clickable="true"
			android:enabled="true"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:hint="@string/user_unit_system_hint"
			android:maxWidth="40sp"
			android:minWidth="40sp"
			android:textOff="@string/user_unit_system_imperial"
			android:textOn="@string/user_unit_system_metric"
			android:textSize="14sp"
			android:textStyle="bold"/>

		<Button
			android:id="@+id/date_picker_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/user_unit_system"
			android:layout_gravity="left"
			android:maxHeight="20dp"
			android:maxLength="12"
			android:maxLines="1"
			android:maxWidth="120sp"
			android:minWidth="120sp"
			android:text="@string/date_picker_button"
			android:textSize="14sp"
			android:textStyle="bold"
			android:visibility="visible"
			tools:text="Birthday"/>

		<EditText
			android:id="@+id/user_height"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/date_picker_button"
			android:layout_gravity="left"
			android:width="80sp"
			android:autoText="true"
			android:clickable="true"
			android:editable="true"
			android:enabled="true"
			android:focusable="true"
			android:gravity="left|start"
			android:hint="@string/user_height_static_hint"
			android:inputType="number|text"
			android:maxWidth="40sp"
			android:minWidth="20sp"
			android:text="@string/user_height"
			android:textIsSelectable="true"
			android:textSize="14sp"
			android:textStyle="normal|bold"
			android:typeface="sans"
			android:visibility="visible"/>

		<TextView
			android:id="@+id/height_units"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/date_picker_button"
			android:layout_gravity="center"
			android:layout_toEndOf="@id/user_height"
			android:text="@string/height_units"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textSize="16sp"
			android:textStyle="bold"/>


		<EditText
			android:id="@+id/hip_circunference_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/user_height"
			android:layout_gravity="left"
			android:width="80sp"
			android:autoText="true"
			android:clickable="true"
			android:editable="true"
			android:enabled="true"
			android:focusable="true"
			android:gravity="left|start"
			android:hint="@string/hip_circunference_hint"
			android:inputType="number|text"
			android:maxWidth="40sp"
			android:minWidth="20sp"
			android:text="@string/hip_circunference_value"
			android:textIsSelectable="true"
			android:textSize="14sp"
			android:textStyle="normal|bold"
			android:typeface="sans"
			android:visibility="visible"/>

		<TextView
			android:id="@+id/length_units"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/user_height"
			android:layout_gravity="center"
			android:layout_toEndOf="@id/hip_circunference_value"
			android:text="@string/length_units"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textSize="16sp"
			android:textStyle="bold"/>

		<EditText
			android:id="@+id/user_weight"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/hip_circunference_value"
			android:layout_gravity="left"
			android:width="80sp"
			android:autoText="true"
			android:clickable="true"
			android:editable="true"
			android:enabled="true"
			android:focusable="true"
			android:gravity="left|start"
			android:hint="@string/user_weight_static_hint"
			android:inputType="number|text"
			android:maxWidth="40sp"
			android:minWidth="20sp"
			android:text="@string/user_weight"
			android:textIsSelectable="true"
			android:textSize="14sp"
			android:textStyle="normal|bold"
			android:typeface="sans"
			android:visibility="visible"/>

		<TextView
			android:id="@+id/weight_units"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/hip_circunference_value"
			android:layout_gravity="center"
			android:layout_toEndOf="@id/user_weight"
			android:text="@string/weight_units"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textSize="16sp"
			android:textStyle="bold"/>

		<EditText
			android:id="@+id/user_weight_target"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/user_weight"
			android:layout_gravity="left"
			android:width="80sp"
			android:autoText="true"
			android:clickable="true"
			android:editable="true"
			android:enabled="true"
			android:focusable="true"
			android:gravity="left|start"
			android:hint="@string/user_weight_target_hint"
			android:inputType="number|text"
			android:maxWidth="40sp"
			android:minWidth="20sp"
			android:text="@string/user_weight_target"
			android:textIsSelectable="true"
			android:textSize="14sp"
			android:textStyle="normal|bold"
			android:typeface="sans"
			android:visibility="visible"/>

		<TextView
			android:id="@+id/weight_unit_target"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/user_weight"
			android:layout_gravity="center"
			android:layout_toEndOf="@id/user_weight_target"
			android:text="@string/weight_units"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textSize="16sp"
			android:textStyle="bold"/>

		<EditText
			android:id="@+id/user_bai_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/user_weight_target"
			android:layout_gravity="left"
			android:width="80sp"
			android:autoText="true"
			android:clickable="true"
			android:editable="true"
			android:enabled="true"
			android:focusable="true"
			android:gravity="left|start"
			android:hint="@string/user_bai_value_hint"
			android:inputType="number|text"
			android:maxWidth="40sp"
			android:minWidth="20sp"
			android:text="@string/user_bai_value"
			android:textIsSelectable="true"
			android:textSize="14sp"
			android:textStyle="normal|bold"
			android:typeface="sans"
			android:visibility="visible"/>

		<EditText
			android:id="@+id/user_bmi_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/user_bai_value"
			android:layout_gravity="left"
			android:width="80sp"
			android:autoText="true"
			android:clickable="true"
			android:editable="true"
			android:enabled="true"
			android:focusable="true"
			android:gravity="left|start"
			android:hint="@string/user_bmi_value_hint"
			android:inputType="number|text"
			android:maxWidth="40sp"
			android:minWidth="20sp"
			android:text="@string/user_bmi_value"
			android:textIsSelectable="true"
			android:textSize="14sp"
			android:textStyle="normal|bold"
			android:typeface="sans"
			android:visibility="visible"/>


		<EditText
			android:id="@+id/user_fat_percentage"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/user_bmi_value"
			android:layout_gravity="left"
			android:width="80sp"
			android:autoText="true"
			android:clickable="true"
			android:editable="true"
			android:enabled="true"
			android:focusable="true"
			android:gravity="left|start"
			android:hint="@string/user_fat_percentage_hint"
			android:inputType="number|text"
			android:maxWidth="40sp"
			android:minWidth="20sp"
			android:text="@string/user_fat_percentage"
			android:textIsSelectable="true"
			android:textSize="14sp"
			android:textStyle="normal|bold"
			android:typeface="sans"
			android:visibility="visible"/>

		<EditText
			android:id="@+id/user_fat_percentage_target"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/user_fat_percentage"
			android:layout_gravity="left"
			android:width="80sp"
			android:autoText="true"
			android:clickable="true"
			android:editable="true"
			android:enabled="true"
			android:focusable="true"
			android:gravity="left|start"
			android:hint="@string/user_fat_percentage_target_hint"
			android:inputType="number|text"
			android:maxWidth="40sp"
			android:minWidth="20sp"
			android:text="@string/user_fat_percentage_target"
			android:textIsSelectable="true"
			android:textSize="14sp"
			android:textStyle="normal|bold"
			android:typeface="sans"
			android:visibility="visible"/>

		<Button
			android:id="@+id/sign_up_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/user_fat_percentage_target"
			android:layout_marginTop="20sp"
			android:text="@string/sign_up"
			android:textStyle="normal"
			android:typeface="sans"/>

	</RelativeLayout>
</ScrollView>

